# BeamLib

./: .gitignore  AGENTS.md  CMakeLists.txt  CODEX_TASKS.md  EXECUTION_PLAN.md  PROJECT_SPEC.md  REVIEW_NOTES.md
docs/: batch_2a_results.html  batch_2b_results.html  batch_3_results.html  batch_4_results.html  batch_5_results.html
docs/theory/: 01_euler_bernoulli_2d.tex  02_euler_bernoulli_3d.tex  03_timoshenko_2d.tex  04_timoshenko_3d.tex  beam_theory_manual.tex
include/BeamLib/Core/: Node.h  SectionProperties.h  Types.h
include/BeamLib/Element/: ElementBase.h  EulerBernoulli2D.h  EulerBernoulli3D.h  Timoshenko2D.h  Timoshenko3D.h
include/BeamLib/Math/: BeamMath3D.h  Rotation2D.h
include/BeamLib/Model/: BeamModel.h  DofMap.h
include/BeamLib/PostProcess/: AnalysisResult.h  InternalForces.h
include/BeamLib/Solver/: LinearSolver.h  NewtonRaphson.h
tests/: test_compile_check.cpp  test_eb2d_cantilever.cpp  test_eb2d_eb3d_crosscheck.cpp  test_eb2d_mass.cpp  test_eb2d_moment.cpp  test_eb2d_patch.cpp  test_eb2d_postprocess.cpp  test_eb2d_rotated_beam.cpp  test_eb2d_settlement.cpp  test_eb2d_simply_supported.cpp  test_eb3d_cantilever.cpp  test_eb3d_mass.cpp  test_eb3d_rigid_body.cpp  test_eb3d_torsion.cpp  test_eb3d_transform.cpp  test_timo2d_cantilever.cpp  test_timo2d_deep_beam.cpp  test_timo2d_mass.cpp  test_timo2d_phi_limit.cpp  test_timo2d_shear_locking.cpp  test_timo2d_slender_limit.cpp  test_timo3d_cantilever.cpp  test_timo3d_deep_beam.cpp  test_timo3d_mass.cpp  test_timo3d_phi_limit.cpp  test_timo3d_shear_locking.cpp  test_timo3d_slender_limit.cpp  test_timo3d_torsion.cpp  test_timo3d_transform.cpp
